Updated images and alignment issues repaired

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -53,7 +53,11 @@ footer{
 /*DESKTOP VIEW*/
 @media screen and (min-device-width: 1025px) {
     .logo-list img{
-        width: 60%;
+        width: 62%;
+    }
+
+    .logo-list{
+        margin-left: 6.7em;
     }
 
 
@@ -67,15 +71,17 @@ footer{
 
     .footer-text{
         font-size: 1.2em;
-        margin-right: 0em;
+        margin-right: 1.95em;
     }
 
     .footer-items li{
         padding-top: 0;
     }
 
-    .logo-list img{
-        margin-right: 0.8em;
+    .footer-items{
+        width: 85%;
     }
+
+    
 
 }
