--- a/src/styles/LunarTracker.css
+++ b/src/styles/LunarTracker.css
@@ -54,7 +54,7 @@
 
     .lunar-phase-title{
         padding-top: 1.3em;
-        font-size: 2.8em;
+        font-size: 2.5em;
     }
 
     .activity-level{
