--- a/src/styles/PressureTracker.css
+++ b/src/styles/PressureTracker.css
@@ -86,7 +86,9 @@
 
     .pressure-checking-machine h1{
         padding-top: 1em;
-        font-size: 2.4em;
+        font-size: 2.5em;
+        text-align: center;
+        padding-left: 2.2em;
     }
 
 
