--- a/src/styles/WeatherData.css
+++ b/src/styles/WeatherData.css
@@ -139,7 +139,7 @@
     }
 
     .weather-data-return h2{
-        font-size: 2.9em;
+        font-size: 2.5em;
         padding-top: 1em;
     }
 
@@ -165,7 +165,7 @@
 
     .search-button{
         margin-bottom: 3em;
-        margin-right: 40em;
+        margin-right: 40.1em;
         width: 15%;
         font-size: 1.3em;
     }
@@ -176,12 +176,12 @@
     }
 
     .weather-card-wrapper h1{
-        margin-right: 1.5em;
+        margin-right: 1.4em;
     }
 
     .user-search{
         width: 27%;
-        margin-right: 44em;
+        margin-right: 43.51em;
     }
 
     @keyframes fadeIn {
